# hmn_final_task

./: .gitignore  CMakeLists.txt  README.md  button.cpp  button.h  game_logic.cpp  game_logic.h  game_model.cpp  game_model.h  item.cpp  item.h  main.cpp  number.cpp  number.h  qml.qrc
ui/: AnimImage.qml  ButtonNumber.qml  ControlButton.qml  ControlPanel.qml  FieldButton.qml  GameField.qml  LevelButton.qml  QmlModel.qml  main.qml
